base: css text overflow fix
* Fixes issue with long file names overflowing widget. (closes #71)

* Changes build badge from travis to shippable.

--- a/zenodo/base/static/less/zenodo.less
+++ b/zenodo/base/static/less/zenodo.less
@@ -94,7 +94,23 @@ h4.repo {
   margin-bottom: 5px;
 }
 
+.nowrap {
+    white-space: nowrap;
+}
 
+.forcewrap {
+    -ms-word-break: break-all;
+
+    /* Be VERY careful with this, breaks normal words wh_erever */
+    word-break: break-all;
+
+    /* Non standard for webkit */
+    word-break: break-word;
+
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+            hyphens: auto;
+}
 
 .rmlink {
   color: #000;
